--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lamraoui Sifeddine Portfolio - Full Stack Web Developer & UI/UX Designer</title>
+        <title>Lamraoui Sifeddine | Full Stack Web Developer & UI/UX Designer</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-        <meta name="keywords" content="" />
-        <meta name="description" content="" />
+        <meta name="keywords" content="Portfolio of Lamraoui Sifeddine, a Full Stack Web Developer and UI/UX Designer" />
+        <meta name="description" content="lamraoui, sifeddine, lamraoui sifeddine, portfolio, developer, designer, web, web developer, full stack, full stack developer, front-end, front-end developer, back-end, back-end developer, ui, ux, ui/ux" />
         <meta name="author" content="Lamraoui Sifeddine" />
         <!-------------------------------------->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -71,7 +71,7 @@
                         <p>I’m a Full Stack Web Developer & UI/UX Designer.<p/>
                         <p>I build responsive and interactive websites and apps.<p/>
                         <p>I live and work in Algeria, mostly freelancing with clients all over the world.<p/>
-                        <p>Feel free to check out my skills and work, if you want to hire me you can contact me below.</p>
+                        <p>Feel free to check out my portfolio, if you want to hire me you can contact me below.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -82,10 +82,10 @@
                 <div class="row">
                     <div class="col-xs-offset-2 col-xs-8">
                         <div class="socialButtons">
-                            <a href="https://github.com/siif0101" target="_blank"><img src="img/github.png"></img></a>
-                            <a href="#" target="_blank"><img src="img/dribbble.png"></img></a>
-                            <a href="#" target="_blank"><img src="img/behance.png"></img></a>
-                            <a href="#" target="_blank"><img src="img/linkedin.png"></img></a>
+                            <a href="https://github.com/lamsif" target="_blank"><img src="img/github.png"></img></a>
+                            <a href="https://dribbble.com/lamsif" target="_blank"><img src="img/dribbble.png"></img></a>
+                            <a href="https://www.behance.net/lamsif" target="_blank"><img src="img/behance.png"></img></a>
+                            <a href="https://www.linkedin.com/in/sifeddine-lamraoui-877084131" target="_blank"><img src="img/linkedin.png"></img></a>
                         </div>
                     </div>
                 </div>
