--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <a data-toggle="modal" data-target="#modal1"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
-                                <h3>LamSif Portfolio<br/><small>(HTML/CSS, Boostrap, JQuery)</small></h3>
+                                <h3>LamSif<br/><small>HTML/CSS, Boostrap, JQuery</small></h3>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <a data-toggle="modal" data-target="#modal2"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
-                                <h3>Siirol Portfolio<br/><small>(HTML/CSS, Boostrap, Wordpress)</small></h3>
+                                <h3>Siirol<br/><small>HTML/CSS, Boostrap, Wordpress</small></h3>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                             <a data-toggle="modal" data-target="#modal3"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
-                                <h3>Team IM App<br/><small>(HTML/CSS, Boostrap, AngularJS)</small></h3>
+                                <h3>Team IM<br/><small>HTML/CSS, Boostrap, AngularJS</small></h3>
                             </div>
                         </div>
                     </div>
