--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/styles.css" />
         <!-------------------------------------->
         <noscript>
-            <div style="position: fixed; width: 100vw; height: 100vh; background-color: #1a2533; z-index: 4;">
+            <div style="position: fixed; width: 100vw; height: 100vh; background-color: #2E383F; z-index: 5;">
                 <div style="position: absolute; width: fit-content; height: fit-content; margin: auto; top: -25%; left: 0; bottom: 0; right: 0;">
                     <h2 style="color: #ffffff; font-family: 'Kuro'; text-align: center;">Your browser does not support JavaScript!</h2>
                 </div>
@@ -23,6 +23,20 @@
         </noscript>
     </head>
     <body class="responsive">
+        <div id="loading">
+            <div class="sk-cube-grid">
+                <div class="sk-cube sk-cube1"></div>
+                <div class="sk-cube sk-cube2"></div>
+                <div class="sk-cube sk-cube3"></div>
+                <div class="sk-cube sk-cube4"></div>
+                <div class="sk-cube sk-cube5"></div>
+                <div class="sk-cube sk-cube6"></div>
+                <div class="sk-cube sk-cube7"></div>
+                <div class="sk-cube sk-cube8"></div>
+                <div class="sk-cube sk-cube9"></div>
+            </div>
+        </div>
+        <!-------------------------------------->
         <div class="menu">
             <img src="img/menu.png"></img>
         </div>
