--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Lamraoui Sifeddine | Full Stack Web Developer & UI/UX Designer</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-        <meta name="keywords" content="Portfolio of Lamraoui Sifeddine, a Full Stack Web Developer and UI/UX Designer" />
-        <meta name="description" content="lamraoui, sifeddine, lamraoui sifeddine, portfolio, developer, designer, web, web developer, full stack, full stack developer, front-end, front-end developer, back-end, back-end developer, ui, ux, ui/ux" />
-        <meta name="author" content="Lamraoui Sifeddine" />
+        <meta name="keywords" content="lamraoui, sifeddine, lamraoui sifeddine, portfolio, developer, designer, web, web developer, full stack, full stack developer, front-end, front-end developer, back-end, back-end developer, ui, ux, ui/ux" />
+        <meta name="description" content="Portfolio of Lamraoui Sifeddine, a Full Stack Web Developer and UI/UX Designer" />
+		<meta name="author" content="Lamraoui Sifeddine" />
         <!-------------------------------------->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
