--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-2 col-sm-4">
                         <div class="workBorder">
-                            <a target="_blank" href="https://lamsif.github.io"><img class="workLink" src="img/link.png"></img></a>
+                            <a href="https://lamsif.github.io"><img class="workLink" src="img/link.png"></img></a>
                             <a data-toggle="modal" data-target="#modal1"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
