--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <a data-toggle="modal" data-target="#modal3"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
-                                <h3>Team IM<br/><small>HTML/CSS, Boostrap, AngularJS</small></h3>
+                                <h3>Teamo<br/><small>HTML/CSS, Boostrap, AngularJS</small></h3>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">LamSif Portfolio</h4>
+                                <h4 class="modal-title">LamSif</h4>
                             </div>
                             <div class="modal-body">
                                 <img src="img/bg.jpeg"></img>
@@ -165,7 +165,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Siirol Portfolio</h4>
+                                <h4 class="modal-title">Siirol</h4>
                             </div>
                             <div class="modal-body">
                                 <img src="img/bg.jpeg"></img>
@@ -179,7 +179,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Team IM App</h4>
+                                <h4 class="modal-title">Teamo</h4>
                             </div>
                             <div class="modal-body">
                                 <img src="img/bg.jpeg"></img>
