--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <div id="particles-js"></div>
             <div class="aboutHeader">
                 <ul>
-                    <li><a onclick="scrollTo('#about');">About</a></li>
-                    <li><a onclick="scrollTo('#work');">Work</a></li>
-                    <li><a onclick="scrollTo('#skills');">Skills</a></li>
-                    <li><a onclick="scrollTo('#contact');">Contact</a></li>
+                    <li><a onclick="scrollingTo('#about');">About</a></li>
+                    <li><a onclick="scrollingTo('#work');">Work</a></li>
+                    <li><a onclick="scrollingTo('#skills');">Skills</a></li>
+                    <li><a onclick="scrollingTo('#contact');">Contact</a></li>
                 </ul>
             </div>
             <div class="aboutBar">
@@ -82,10 +82,12 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-                        <p>I’m a Full Stack Web Developer & UI/UX Designer.<p/>
-                        <p>I build responsive and interactive websites and apps.<p/>
-                        <p>I live and work in Algeria, mostly freelancing with clients all over the world.<p/>
-                        <p>Feel free to check out my portfolio, if you want to hire me you can contact me below.</p>
+                        <div class="aboutInfo">
+                            <p>I’m a Full Stack Web Developer & UI/UX Designer.<p/>
+                            <p>I build responsive and interactive websites and apps.<p/>
+                            <p>I live and work in Algeria, mostly freelancing with clients all over the world.<p/>
+                            <p>Feel free to check out my portfolio, if you want to hire me you can contact me below.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
