--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/back-end.png"></img>
                         <h3>Back-end</h3>
-                        <p>NodeJS<br/>ExpressJS<br/>PHP<br/>Lavarel<br/>Python<br/>Flask<br/>MySQL<br/>MongoDB</p>
+                        <p>NodeJS<br/>ExpressJS<br/>Python<br/>Flask<br/>PHP<br/>Apache<br/>MySQL<br/>MongoDB</p>
                     </div>
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/tools.png"></img>
