--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <a data-toggle="modal" data-target="#modal1"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
-                                <h3>LamSif<br/><small>HTML/CSS, Boostrap, JQuery</small></h3>
+                                <h3>LamSif<br/><small>HTML/CSS, Boostrap, JQuery, Python</small></h3>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             <a data-toggle="modal" data-target="#modal2"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
-                                <h3>Siirol<br/><small>HTML/CSS, Boostrap, Wordpress</small></h3>
+                                <h3>Siirol<br/><small>HTML/CSS, Boostrap, JQuery, Wordpress, PHP</small></h3>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             <a data-toggle="modal" data-target="#modal3"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/bg.jpeg"></img>
                             <div class="workTitle">
-                                <h3>Teamo<br/><small>HTML/CSS, Boostrap, AngularJS</small></h3>
+                                <h3>Teamo<br/><small>HTML/CSS, Boostrap, JQuery, Sass, AngularJS, Angular Material, Qunit, NodeJS, ExpressJS, MongoDB</small></h3>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/front-end.png"></img>
                         <h3>Front-end</h3>
-                        <p>HTML5<br/>CSS3<br/>JavaScript<br/>JQuery<br/>Bootstrap<br/>Sass<br/>AngularJS<br/>Qunit<br/>Wordpress</p>
+                        <p>HTML5<br/>CSS3<br/>JavaScript<br/>JQuery<br/>Bootstrap<br/>Sass<br/>AngularJS<br/>Angular Material<br/>Qunit<br/>Wordpress</p>
                     </div>
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/back-end.png"></img>
@@ -211,7 +211,7 @@
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/tools.png"></img>
                         <h3>Tools</h3>
-                        <p>Adobe Photoshop<br/>Git<br/>Eclipse IDE<br/>Visual Studio<br/>Android Studio<br/>AWS<br/>OpenShift</p>
+                        <p>Adobe Photoshop<br/>Git<br/>Eclipse IDE<br/>Visual Studio<br/>Android Studio<br/>AWS<br/>OpenShift<br/>Firebase</p>
                     </div>
                 </div>
             </div>
