--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
                     <div class="col-xs-offset-2 col-xs-8">
                         <div class="socialButtons">
                             <a href="https://github.com/lamsif" target="_blank"><img src="img/github.png"></img></a>
-                            <a href="https://dribbble.com/lamsif" target="_blank"><img src="img/dribbble.png"></img></a>
-                            <a href="https://www.behance.net/lamsif" target="_blank"><img src="img/behance.png"></img></a>
                             <a href="https://www.linkedin.com/in/sifeddine-lamraoui-877084131" target="_blank"><img src="img/linkedin.png"></img></a>
                         </div>
                     </div>
@@ -118,9 +116,9 @@
                         <div class="workBorder">
                             <a href="https://lamsif.github.io"><img class="workLink" src="img/link.png"></img></a>
                             <a data-toggle="modal" data-target="#modal1"><img class="workZoom" src="img/zoom.png"></img></a>
-                            <img class="workBG" src="img/bg.jpeg"></img>
+                            <img class="workBG" src="img/lamsif.png"></img>
                             <div class="workTitle">
-                                <h3>LamSif<br/><small>HTML/CSS, Boostrap, JQuery, Python</small></h3>
+                                <h3>LamSif</h3>
                             </div>
                         </div>
                     </div>
@@ -128,9 +126,9 @@
                         <div class="workBorder">
                             <a target="_blank" href="http://siirol.com"><img class="workLink" src="img/link.png"></img></a>
                             <a data-toggle="modal" data-target="#modal2"><img class="workZoom" src="img/zoom.png"></img></a>
-                            <img class="workBG" src="img/bg.jpeg"></img>
+                            <img class="workBG" src="img/siirol.png"></img>
                             <div class="workTitle">
-                                <h3>Siirol<br/><small>HTML/CSS, Boostrap, JQuery, Wordpress, PHP</small></h3>
+                                <h3>Siirol</h3>
                             </div>
                         </div>
                     </div>
@@ -140,9 +138,9 @@
                         <div class="workBorder">
                             <a target="_blank" href="https://lamsif.github.io/teamo"><img class="workLink" src="img/link.png"></img></a>
                             <a data-toggle="modal" data-target="#modal3"><img class="workZoom" src="img/zoom.png"></img></a>
-                            <img class="workBG" src="img/bg.jpeg"></img>
+                            <img class="workBG" src="img/teamo.png"></img>
                             <div class="workTitle">
-                                <h3>Teamo<br/><small>HTML/CSS, Boostrap, JQuery, Sass, AngularJS, Angular Material, Qunit, NodeJS, ExpressJS, MongoDB</small></h3>
+                                <h3>Teamo</h3>
                             </div>
                         </div>
                     </div>
@@ -156,7 +154,9 @@
                                 <h4 class="modal-title">LamSif</h4>
                             </div>
                             <div class="modal-body">
-                                <img src="img/bg.jpeg"></img>
+								<p><b>Description: </b>Personal portfolio where i showcase my skills and previous work.<br/>
+								<b>Technologies used: </b>HTML/CSS, Boostrap, JQuery, PHP</p><br/>
+                                <img src="img/lamsif.png"></img>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,9 @@
                                 <h4 class="modal-title">Siirol</h4>
                             </div>
                             <div class="modal-body">
-                                <img src="img/bg.jpeg"></img>
+								<p><b>Description: </b>Mobile game development studio website.<br/>
+								<b>Technologies used: </b>HTML/CSS, Boostrap, JQuery, Wordpress, PHP</p><br/>
+                                <img src="img/siirol.png"></img>
                             </div>
                         </div>
                     </div>
@@ -184,7 +186,9 @@
                                 <h4 class="modal-title">Teamo</h4>
                             </div>
                             <div class="modal-body">
-                                <img src="img/bg.jpeg"></img>
+								<p><b>Description: </b>Project management web app.<br/>
+								<b>Technologies used: </b>HTML/CSS, Boostrap, JQuery, Sass, AngularJS, Angular Material, NodeJS, ExpressJS, MongoDB</p><br/>
+                                <img src="img/teamo.png"></img>
                             </div>
                         </div>
                     </div>
@@ -201,17 +205,17 @@
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/front-end.png"></img>
                         <h3>Front-end</h3>
-                        <p>HTML5<br/>CSS3<br/>JavaScript<br/>JQuery<br/>Bootstrap<br/>Sass<br/>AngularJS<br/>Angular Material<br/>Qunit<br/>Wordpress</p>
+                        <p>HTML5<br/>CSS3<br/>JavaScript<br/>JQuery<br/>Bootstrap<br/>Sass<br/>AngularJS<br/>Angular Material<br/>Wordpress</p>
                     </div>
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/back-end.png"></img>
                         <h3>Back-end</h3>
-                        <p>NodeJS<br/>ExpressJS<br/>Python<br/>Flask<br/>PHP<br/>Apache<br/>MySQL<br/>MongoDB</p>
+                        <p>NodeJS<br/>ExpressJS<br/>RESTful APIs<br/>PHP<br/>Apache<br/>MySQL<br/>MongoDB</p>
                     </div>
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/tools.png"></img>
                         <h3>Tools</h3>
-                        <p>Adobe Photoshop<br/>Git<br/>Eclipse IDE<br/>Visual Studio<br/>Android Studio<br/>AWS<br/>OpenShift<br/>Firebase</p>
+                        <p>Adobe Photoshop<br/>Git<br/>Eclipse IDE<br/>Visual Studio<br/>AWS<br/>OpenShift<br/>Firebase</p>
                     </div>
                 </div>
             </div>
@@ -229,22 +233,18 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <label>Full Name</label>
-                                    <input type="text" name="fullname" placeholder="Full Name" />
+                                    <input type="text" id="fullname" placeholder="Full Name" />
                                 </div>
                                 <div class="col-xs-12">
                                     <label>Email</label>
-                                    <input type="email" name="email" placeholder="Email" />
-                                </div>
-                                <div class="col-xs-12">
-                                    <label>Budget ($)</label>
-                                    <input type="text" name="budget" placeholder="Budget ($)" />
+                                    <input type="email" id="email" placeholder="Email" />
                                 </div>
                                 <div class="col-xs-12">
                                     <label>Message</label>
-                                    <textarea rows="5" name="message" placeholder="Message"></textarea>
+                                    <textarea rows="5" id="message" placeholder="Message"></textarea>
                                 </div>
                                 <div class="col-xs-12">
-                                    <button type="submit">Send</button>
+                                    <button type="button" onclick="sendEmail();">Send</button>
                                 </div>
                             </div>
                         </div>
