--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-0 col-sm-4">
                         <div class="workBorder">
-                            <a target="_blank" href="http://siirol.netii.net"><img class="workLink" src="img/link.png"></img></a>
+                            <a target="_blank" href="https://siirol.000webhostapp.com"><img class="workLink" src="img/link.png"></img></a>
                             <a data-toggle="modal" data-target="#modal2"><img class="workZoom" src="img/zoom.png"></img></a>
                             <img class="workBG" src="img/siirol.png"></img>
                             <div class="workTitle">
