--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lamraoui Sifeddine | Full Stack Web Developer & UI/UX Designer</title>
+        <title>Lamraoui Sifeddine | Full Stack Web Developer</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <meta name="keywords" content="lamraoui, sifeddine, lamraoui sifeddine, portfolio, developer, designer, web, web developer, full stack, full stack developer, front-end, front-end developer, back-end, back-end developer, ui, ux, ui/ux" />
-        <meta name="description" content="Portfolio of Lamraoui Sifeddine, a Full Stack Web Developer and UI/UX Designer" />
+        <meta name="description" content="Portfolio of Lamraoui Sifeddine, a Full Stack Web Developer" />
 		<meta name="author" content="Lamraoui Sifeddine" />
         <!-------------------------------------->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -83,9 +83,8 @@
                 <div class="row">
                     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
                         <div class="aboutInfo">
-                            <p>I’m a Full Stack Web Developer & UI/UX Designer.<p/>
+                            <p>I’m a Full Stack Web Developer.<p/>
                             <p>I build responsive and interactive websites and apps.<p/>
-                            <p>I live and work in Algeria, mostly freelancing with clients all over the world.<p/>
                             <p>Feel free to check out my portfolio, if you want to hire me you can contact me below.</p>
                         </div>
                     </div>
