--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="col-xs-4 skillsBorder">
                         <img src="img/tools.png"></img>
                         <h3>Tools</h3>
-                        <p>Adobe Photoshop<br/>Git<br/>Eclipse IDE<br/>Visual Studio<br/>AWS<br/>OpenShift<br/>Firebase</p>
+                        <p>Adobe Photoshop<br/>Gulp<br/>Git<br/>Eclipse IDE<br/>Visual Studio<br/>AWS<br/>OpenShift</p>
                     </div>
                 </div>
             </div>
