--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-0 col-sm-4">
                         <div class="workBorder">
-                            <div class="workItem workItemLink"><a target="_blank" href="https://siirol.firebaseapp.com"><i class="material-icons">link</i></a></div>
+                            <div class="workItem workItemLink"><a target="_blank" href="https://siirol.web.app"><i class="material-icons">link</i></a></div>
                             <div class="workItem"><a data-toggle="modal" data-target="#modal2"><i class="material-icons">search</i></a></div>
                             <img class="workBG" src="img/siirol.png"></img>
                             <div class="workTitle">
