--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="workBorder">
                             <div class="workItem workItemLink"><a target="_blank" href="https://mega-tracking-1534235041668.appspot.com"><i class="material-icons">link</i></a></div>
                             <div class="workItem"><a data-toggle="modal" data-target="#modal3"><i class="material-icons">search</i></a></div>
-                            <img class="workBG" src="img/mtweb.png"></img>
+                            <img class="workBG" src="img/mtweb.jpg"></img>
                             <div class="workTitle">
                                 <h3>Mega Tracking Web</h3>
                             </div>
@@ -199,7 +199,7 @@
                             <div class="modal-body">
 								<p><b>Description: </b>Fleet management system.<br/>
 								<b>Technologies used: </b>HTML/CSS, Boostrap, React, Node.js, Express, MongoDB</p><br/>
-                                <img src="img/mtweb.png"></img>
+                                <img src="img/mtweb.jpg"></img>
                             </div>
                         </div>
                     </div>
