--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="row">
                     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-2 col-sm-4">
                         <div class="workBorder">
-                            <div class="workItem workItemLink"><a target="_blank" href="https://mega-tracking-1534235041668.appspot.com"><i class="material-icons">link</i></a></div>
+                            <div class="workItem workItemLink"><a target="_blank" href="https://mega-tracking.com"><i class="material-icons">link</i></a></div>
                             <div class="workItem"><a data-toggle="modal" data-target="#modal3"><i class="material-icons">search</i></a></div>
                             <img class="workBG" src="img/mtweb.jpg"></img>
                             <div class="workTitle">
@@ -147,7 +147,7 @@
                     </div>
                     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-0 col-sm-4">
                         <div class="workBorder">
-                            <div class="workItem workItemLink"><a target="_blank" href="https://mega-tracking-1534235041668.appspot.com/files/mt-app.apk"><i class="material-icons">link</i></a></div>
+                            <div class="workItem workItemLink"><a target="_blank" href="https://mega-tracking.com/files/mt-app.apk"><i class="material-icons">link</i></a></div>
                             <div class="workItem"><a data-toggle="modal" data-target="#modal4"><i class="material-icons">search</i></a></div>
                             <img class="workBG" src="img/mtmobile.png"></img>
                             <div class="workTitle">
